# mindiff

./: README.md  pyproject.toml
src/mindiff/: mindiff.py
