[tool.poetry]
name = "mindiff"
version = "0.1.0"
description = "Diff with simplified output format"
authors = ["Yoichi Amano <amano.yoichi@gmail.com>"]
readme = "README.md"
packages = [{include = "mindiff", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
black = "*"

[tool.poetry.scripts]
mindiff = "mindiff.mindiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
